--- a/CompEnvUpdater/pom.xml
+++ b/CompEnvUpdater/pom.xml
@@ -79,5 +79,15 @@
 			<artifactId>owlapi-distribution</artifactId>
 			<version>5.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.25</version>
+		</dependency>
 	</dependencies>
 </project>
